--- a/Account/RegisterService.cshtml
+++ b/Account/RegisterService.cshtml
@@ -37,7 +37,7 @@
         providerDisplayName = OAuthWebSecurity.GetOAuthClientData(provider).DisplayName;
         if (Validation.IsValid()) {
             // Insert a new user into the database
-            var db = Database.Open("alltheaAGlcwEO8C");
+            var db = Database.Open("All");
 
             // Check if user already exists
             var user = db.QuerySingle("SELECT Email FROM UserProfile WHERE LOWER(Email) = LOWER(@0)", email);
