--- a/Expenses.cshtml
+++ b/Expenses.cshtml
@@ -3,30 +3,41 @@
     Page.Title = "Expenses";
 }
 
+ @{
+     var DateTime="";
+     var Category="";
+     var Price="";
+     var MoreInfo="";
+     int UserId;
+       if(IsPost){
+         DateTime=Request["formDateTime"];
+         Category=Request["formCategory"];
+         Price=Request["formPrice"];
+         MoreInfo=Request["formMoreInfo"];
+
+         UserId= WebSecurity.CurrentUserId;
+         var SQLINSERT = "INSERT INTO Expense (DateTime, Category, Price, MoreInfo, UserId) VALUES (@0, @1, @2, @3, UserId)";
+         var db = Database.Open("Expense");
+         db.Execute(SQLINSERT, DateTime, Category, Price, MoreInfo, UserId);
+       }
+     }
+
 <hgroup class="title">
     <h1>@Page.Title.</h1>
-    <h2>Your app description page.</h2>
+    <h2>This is where you can add a new expense.</h2>
 </hgroup>
 
-<article>
-    <p>
-        Use this area to provide additional information.
-    </p>
-
-    <p>
-        Use this area to provide additional information.
-    </p>
-
-    <p>
-        Use this area to provide additional information.
-    </p>
-</article>
+     <h1>Add a new expense</h1>
+       <form action="" method="post">
+         <p>Date and Time: <input type="text" name="formDateTime" /></p>
+         <p>Category: <input type="text" name="formCategory" /></p>
+         <p>Price: <input type="text" name="formPrice" /></p>
+         <p>MoreInfo: <input type="text" name="formMoreInfo" /></p>
+         <p><input type="submit" value="Enter" /></p>
+     </form>
 
 <aside>
     <h3>Aside Title</h3>
-    <p>
-        Use this area to provide additional information.
-    </p>
     <ul>
         <li><a href="~/">Home</a></li>
         <li><a href="~/Expenses">Expenses</a></li>
