--- a/_SiteLayout.cshtml
+++ b/_SiteLayout.cshtml
@@ -15,7 +15,7 @@
         <header>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p class="site-title"><a href="~/">your logo here</a></p>
+                    <p class="site-title"><img src="dummy_icon.png" alt="Sample Photo"/></p>
                 </div>
                 <div class="float-right">
                     <section id="login">
