Making expenses page only available when logged in.

--- a/_SiteLayout.cshtml
+++ b/_SiteLayout.cshtml
@@ -37,7 +37,7 @@
                     <nav>
                         <ul id="menu">
                             <li><a href="~/">Home</a></li>
-                            <li><a href="~/Expenses">Expenses</a></li>
+                            <li><a href="~/Members/Expenses">Expenses</a></li>
                             <li><a href="~/Contact">Contact</a></li>
                         </ul>
                     </nav>
