--- a/Members/Expenses.cshtml
+++ b/Members/Expenses.cshtml
@@ -1,4 +1,8 @@
 ﻿@{
+    if (!WebSecurity.IsAuthenticated) {
+        Response.Redirect("~/Account/Login?returnUrl="
+            + Request.Url.LocalPath);
+    }
     Layout = "~/_SiteLayout.cshtml";
     Page.Title = "Expenses";
 }
@@ -40,7 +44,7 @@
     <h3>Aside Title</h3>
     <ul>
         <li><a href="~/">Home</a></li>
-        <li><a href="~/Expenses">Expenses</a></li>
+        <li><a href="~/Members/Expenses">Expenses</a></li>
         <li><a href="~/Contact">Contact</a></li>
     </ul>
 </aside>
