--- a/_SiteLayout.cshtml
+++ b/_SiteLayout.cshtml
@@ -15,7 +15,7 @@
         <header>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p class="site-title"><img src="dummy_icon.png" alt="Sample Photo"/></p>
+                    <p class="site-title"><img src="~/Images/|dummy_icon.png" alt="Sample Photo"/></p>
                 </div>
                 <div class="float-right">
                     <section id="login">
@@ -38,6 +38,7 @@
                         <ul id="menu">
                             <li><a href="~/">Home</a></li>
                             <li><a href="~/Members/Expenses">Expenses</a></li>
+                            <li><a href="~/Members/Charts">Charts</a></li>
                             <li><a href="~/Contact">Contact</a></li>
                         </ul>
                     </nav>
