Added ChartData.cshtml Added chart image into Charts.cshtml Changed value in database for easier viewing of charts in test

--- a/Members/Charts.cshtml
+++ b/Members/Charts.cshtml
@@ -25,6 +25,7 @@
  </head>
  <body>
    <h1>Charts</h1>
+     <img src="~/ChartData.cshtml" alt="Sample Photo"/>
    <table>
        <thead>
            <tr>
