--- a/Members/Charts.cshtml
+++ b/Members/Charts.cshtml
@@ -23,7 +23,7 @@
  </head>
  <body>
    <h1>Charts</h1>
-
+       <img src="~/ChartData.cshtml" alt="Sample chart"/>
    <table>
        <thead>
            <tr>
