--- a/ChartData.cshtml
+++ b/ChartData.cshtml
@@ -2,15 +2,12 @@
     var db = Database.Open("StarterSite");
     var CurrentUserId = WebSecurity.CurrentUserId;
     var data = db.Query("SELECT Category, DateTime Price FROM Expense WHERE UserId = " + @CurrentUserId + " ORDER BY DateTime DESC");
-    IEnumerable<string> distinctCategory = data.Distinct(Category);
+    var Categories=db.Query("SELECT DISTINCT Category FROM Expense WHERE UserId = " + @CurrentUserId);
+    <!--var categories = data.Select("Category");-->
     var myChart = new Chart(width: 600, height: 400, theme: ChartTheme.Vanilla)
-        .AddTitle("Product Costs");
-            foreach (int element in distinctCategory)
-            {
-                mychart.AddSeries("Category", 
-                    xValue: data, xField: "DateTime",
-                    yValues: data, yFields: "Price");
-            }
-
-        myChart.Write();
+        .AddTitle("Product Costs")
+        .AddSeries("Categories", 
+            xValue: data, xField: "DateTime",
+            yValues: data, yFields: "Price")
+        .Write();
 }
