--- a/Members/Charts.cshtml
+++ b/Members/Charts.cshtml
@@ -6,7 +6,7 @@
     
     var db = Database.Open("StarterSite");
     var CurrentUserId = WebSecurity.CurrentUserId;
-    var selectQueryString = "SELECT Date, Time, Category, Price, MoreInfo FROM Expense WHERE UserId = " + @CurrentUserId + " ORDER BY DateTime DESC";
+    var selectQueryString = "SELECT Date, Time, Category, Price, MoreInfo FROM Expense WHERE UserId = " + @CurrentUserId + " ORDER BY Date DESC, Time DESC";
 
     Layout = "~/_SiteLayout.cshtml";
     Page.Title = "Charts";
