--- a/Members/Charts.cshtml
+++ b/Members/Charts.cshtml
@@ -7,7 +7,8 @@
     string[] TotalPrices = new string[3];
     var db = Database.Open("StarterSite");
     var UserId = WebSecurity.CurrentUserId;
-    var selectQueryString = "SELECT Date, Time, Category, Price, MoreInfo FROM Expense WHERE UserId = " + @UserId + " ORDER BY Date DESC, Time DESC";
+    <!--var SumQueryString = "SELECT SUM(Price) AS TotalPrice FROM Expense WHERE Category = " + row.Category +", UserId = " + @UserId;
+-->    var selectQueryString = "SELECT Date, Time, Category, Price, MoreInfo FROM Expense WHERE UserId = " + @UserId + " ORDER BY Date DESC, Time DESC";
     var SelectUserCategories = ("SELECT DISTINCT Category FROM Expense, Catagories WHERE UserId = " + @UserId + "SELECT CategoryName FROM Catagories");
     
 
@@ -68,7 +69,9 @@
             foreach(var row2 in db.Query(selectQueryString)){
                 if(row.Category==row2.Category)
                 {
-                    TotalPrices[row] = "SELECT SUM(Price) AS TotalPrice FROM Expense WHERE Category = " + row.Category;
+                    var SumQueryString = db.QueryValue("SELECT SUM(Price) AS TotalPrice FROM Expense WHERE Category = " + row.Category);
+                    TotalPrices[row] = (SumQueryString)+TotalPrices;
+                    
                 }
             }
            }
