--- a/Members/Charts.cshtml
+++ b/Members/Charts.cshtml
@@ -4,13 +4,14 @@
             + Request.Url.LocalPath);
     }
     
-    string[] TotalPrices = new string[3];
+    
     var db = Database.Open("StarterSite");
     var UserId = WebSecurity.CurrentUserId;
     <!--var SumQueryString = "SELECT SUM(Price) AS TotalPrice FROM Expense WHERE Category = " + row.Category +", UserId = " + @UserId;
 -->    var selectQueryString = "SELECT Date, Time, Category, Price, MoreInfo FROM Expense WHERE UserId = " + @UserId + " ORDER BY Date DESC, Time DESC";
     var SelectUserCategories = ("SELECT DISTINCT Category FROM Expense, Catagories WHERE UserId = " + @UserId + "SELECT CategoryName FROM Catagories");
-    
+    //decimal[] TotalPrices = new decimal[SelectUserCategories.Length];
+    Dictionary<string, money> TotalPrices = new Dictionary<string, money>();
 
 
     Layout = "~/_SiteLayout.cshtml";
@@ -69,8 +70,10 @@
             foreach(var row2 in db.Query(selectQueryString)){
                 if(row.Category==row2.Category)
                 {
-                    var SumQueryString = db.QueryValue("SELECT SUM(Price) AS TotalPrice FROM Expense WHERE Category = " + row.Category);
-                    TotalPrices[row] = (SumQueryString)+TotalPrices;
+                    var SumQueryString = db.QuerySingle("SELECT SUM(Price) AS TotalPrice FROM Expense WHERE Category = '" + row2.Category + "'");
+                    int value = (int)SumQueryString.TotalPrice;
+                    
+                    TotalPrices[row] = (SumQueryString)+value;
                     
                 }
             }
