--- a/Members/Charts.cshtml
+++ b/Members/Charts.cshtml
@@ -1,4 +1,5 @@
 ﻿@{
+    var TotalPrices = new Dictionary<string, int>();
     if (!WebSecurity.IsAuthenticated) {
         Response.Redirect("~/Account/Login?returnUrl="
             + Request.Url.LocalPath);
@@ -7,17 +8,14 @@
     
     var db = Database.Open("StarterSite");
     var UserId = WebSecurity.CurrentUserId;
-    <!--var SumQueryString = "SELECT SUM(Price) AS TotalPrice FROM Expense WHERE Category = " + row.Category +", UserId = " + @UserId;
--->    var selectQueryString = "SELECT Date, Time, Category, Price, MoreInfo FROM Expense WHERE UserId = " + @UserId + " ORDER BY Date DESC, Time DESC";
+    var selectQueryString = "SELECT Date, Time, Category, Price, MoreInfo FROM Expense WHERE UserId = " + @UserId + " ORDER BY Date DESC, Time DESC";
     var SelectUserCategories = ("SELECT DISTINCT Category FROM Expense, Catagories WHERE UserId = " + @UserId + "SELECT CategoryName FROM Catagories");
-    //decimal[] TotalPrices = new decimal[SelectUserCategories.Length];
-    Dictionary<string, money> TotalPrices = new Dictionary<string, money>();
-
 
     Layout = "~/_SiteLayout.cshtml";
     Page.Title = "Charts";
 
  }
+
 <!DOCTYPE html>
 <html>
  <head>
@@ -61,7 +59,7 @@
            <tr>
                @foreach(var row in db.Query(selectQueryString)){
 
-                <th>row.Category</th>
+                <th>@row.Category</th>
            }
                </tr>
        </thead>
@@ -72,8 +70,16 @@
                 {
                     var SumQueryString = db.QuerySingle("SELECT SUM(Price) AS TotalPrice FROM Expense WHERE Category = '" + row2.Category + "'");
                     int value = (int)SumQueryString.TotalPrice;
-                    
-                    TotalPrices[row] = (SumQueryString)+value;
+
+                    if (!TotalPrices.ContainsKey(row.Category)){
+                        TotalPrices.Add(row.Category, value);   
+                    }
+                    else
+                    {
+                        TotalPrices[row.Category] = TotalPrices[row.Category] + value;
+                    }
+                        
+                        
                     
                 }
             }
