--- a/AllTheAirgeadApp/alltheairgeadApp/PivotPage.xaml
+++ b/AllTheAirgeadApp/alltheairgeadApp/PivotPage.xaml
@@ -30,10 +30,10 @@
                 <!--Double line list with text wrapping-->
                 <StackPanel Width ="250" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <StackPanel Orientation="Horizontal" Height="40">
-                        <DatePicker Width="120" Margin="0,-10,5,0"/>
-                        <TimePicker Width="120" Margin="5,-10,0,0"/>
+                        <DatePicker x:Name="Date" Width="120" Margin="0,-10,5,0"/>
+                        <TimePicker x:Name="Time" Width="120" Margin="5,-10,0,0"/>
                     </StackPanel>
-                    <ComboBox PlaceholderText="Category" AllowDrop="True" Width="250">
+                    <ComboBox x:Name="Category" PlaceholderText="Category" AllowDrop="True" Width="250">
                         <ComboBoxItem Content="Rent"/>
                         <ComboBoxItem Content="Food"/>
                         <ComboBoxItem Content="Games"/>
@@ -42,8 +42,8 @@
                         <ComboBoxItem Content="College"/>
                         <ComboBoxItem Content="Other"/>
                     </ComboBox>
-                    <TextBox Margin="0,0,0,5" InputScope="CurrencyAmountAndSymbol" TextWrapping="Wrap" PlaceholderText="€" Width="250"/>
-                    <TextBox Margin="0,5" TextWrapping="Wrap" PlaceholderText="More info..." Width="250"/>
+                    <TextBox x:Name="Price" Margin="0,0,0,5" InputScope="CurrencyAmountAndSymbol" TextWrapping="Wrap" PlaceholderText="€" Width="250"/>
+                    <TextBox x:Name="MoreInfo" Margin="0,5" TextWrapping="Wrap" PlaceholderText="More info..." Width="250"/>
                     <Button x:Name="SubmitButton" Content="Submit" Click="SubmitButton_Click" Height="58" Width="75"/>
                 </StackPanel>
             </PivotItem>
