Changed Graph so it is named all time. Added Day, Month, Year Graph. Changed charts to show renamed all time graph.

--- a/Members/Charts.cshtml
+++ b/Members/Charts.cshtml
@@ -30,7 +30,7 @@
  </head>
  <body>
    <h1>Charts</h1>
-       <img src="~/ChartData.cshtml" alt="Sample chart"/>
+       <img src="~/AllChartData.cshtml" alt="Sample chart"/>
    <table>
        <thead>
            <tr>
