--- a/DayGraph.cshtml
+++ b/DayGraph.cshtml
@@ -2,7 +2,7 @@
    
     var db = Database.Open("StarterSite");
     var CurrentUserId = WebSecurity.CurrentUserId;
-    var data = db.Query("SELECT Time, SUM(Price) as TotalPrice FROM Expense WHERE UserId = " + @CurrentUserId + "AND Month(Date) = Month(getdate())GROUP BY Time");
+    var data = db.Query("SELECT Time, SUM(Price) as TotalPrice FROM Expense WHERE UserId = " + @CurrentUserId + "AND Day(Date) = Day(getdate())GROUP BY Time");
     <!--var DinCat = data.Select("Category");-->
     
     var myChart = new Chart(width: 600, height: 400);
