Attempting to add an Analytics page

--- a/Content/Site.css
+++ b/Content/Site.css
@@ -126,6 +126,11 @@ footer {
     height: 100px;
 }
 
+#Block {
+    display: inline-block;
+    width: 450px;
+}
+
 
 /* site title
 ----------------------------------------------------------*/
