--- a/Analytics.cshtml
+++ b/Analytics.cshtml
@@ -17,11 +17,14 @@
         <div id="Block">
             <h2>Compare me to other people</h2>
             <p>To enable you to compare to other people, you need to give us a little more inforation about yourself to help us make comparsons that make sense.</p>
+            <input type="submit" value="Get Started"/>
         </div>
         <div id="Block">
             <h2>Help me save money</h2>
             <p>AllTheAirgead helps you save money by going through your expenses and identifying the ones you have specified as lower priority. Using this, we can suggest where you culd cut back on spending. You can alter the default priority of each category, as well as change the priority of individual expenses when you create them.</p>
+            <input type="submit" value="Help me save"/>
         </div>
+
 
         
     </body>
