--- a/Default.cshtml
+++ b/Default.cshtml
@@ -8,11 +8,9 @@
     <div class="content-wrapper">
         <hgroup class="title">
             <h1>@Page.Title.</h1>
-            <h2>Modify this template to jump-start your ASP.NET Web Pages application.</h2>
+            <h2>All the Airgead is an expenses tracking app designed to hel you manage your day to day expenses.</h2>
         </hgroup>
-        <p>
-            All the Airgead is an expenses tracking app aimed at the general population rather than specifically for tracking business expenses.
-        </p>
+
     </div>
 </section>
 }
