--- a/_SiteLayout.cshtml
+++ b/_SiteLayout.cshtml
@@ -40,6 +40,7 @@
                             <li><a href="~/Members/Expenses">Expenses</a></li>
                             <li><a href="~/Members/Charts">Charts</a></li>
                             <li><a href="~/Contact">Contact</a></li>
+                            <li><a href="~/Analytics">Money Management</a></li>
                         </ul>
                     </nav>
                 </div>
