--- a/AllChartData.cshtml
+++ b/AllChartData.cshtml
@@ -5,7 +5,7 @@
     var data = db.Query("SELECT Category, SUM(Price) as TotalPrice FROM Expense WHERE UserId = "+ @CurrentUserId + " GROUP BY Category");
     <!--var DinCat = data.Select("Category");-->
     
-    var myChart = new Chart(width: 600, height: 400);
+    var myChart = new Chart(width: 600, height: 400, themePath: "MyChartTheme.xml");
         myChart=myChart.AddTitle("Product Costs");
         myChart = myChart.AddSeries("Default",
             xValue: data, xField: "Category",
