--- a/DayGraph.cshtml
+++ b/DayGraph.cshtml
@@ -5,7 +5,7 @@
     var data = db.Query("SELECT Time, SUM(Price) as TotalPrice FROM Expense WHERE UserId = " + @CurrentUserId + "AND Day(Date) = Day(getdate())GROUP BY Time");
     <!--var DinCat = data.Select("Category");-->
     
-    var myChart = new Chart(width: 600, height: 400);
+    var myChart = new Chart(width: 600, height: 400, themePath: "MyChartTheme.xml");
         myChart=myChart.AddTitle("Product Costs");
         myChart = myChart.AddSeries("Default", chartType:"Line",
             xValue: data, xField: "Time",
